[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/fnt_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/themes/theme_hud_main.tres" type="Theme" id=2]
[ext_resource path="res://scripts/scene_scripts/scn_ui_overlay.gd" type="Script" id=3]

[node name="ScnUiOverlay" type="CanvasLayer"]
visible = false
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="Shade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.156863 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="PopupStartBattle" type="PanelContainer" parent="CenterContainer"]
visible = false
margin_left = 940.0
margin_top = 530.0
margin_right = 980.0
margin_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 297, 75 )

[node name="Label" type="Label" parent="CenterContainer/PopupStartBattle"]
margin_left = 20.0
margin_top = 10.0
margin_right = 574.0
margin_bottom = 139.0
custom_fonts/font = ExtResource( 1 )
text = "BATTLE!"

[node name="PopupBattleLost" type="PanelContainer" parent="CenterContainer"]
visible = false
margin_left = 940.0
margin_top = 530.0
margin_right = 980.0
margin_bottom = 550.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PopupBattleLost"]
margin_left = 20.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="CenterContainer/PopupBattleLost/VBoxContainer"]
margin_right = 690.0
margin_bottom = 65.0
text = "You lose!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PopupBattleLost/VBoxContainer"]
margin_top = 69.0
margin_right = 690.0
margin_bottom = 154.0
alignment = 1

[node name="BtnMenu" type="Button" parent="CenterContainer/PopupBattleLost/VBoxContainer/HBoxContainer"]
margin_right = 362.0
margin_bottom = 85.0
mouse_default_cursor_shape = 2
text = "Main Menu"

[node name="BtnRetry" type="Button" parent="CenterContainer/PopupBattleLost/VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 690.0
margin_bottom = 85.0
mouse_default_cursor_shape = 2
text = "Try Again"

[node name="PopupBattleWon" type="PanelContainer" parent="CenterContainer"]
visible = false
margin_left = 940.0
margin_top = 530.0
margin_right = 980.0
margin_bottom = 550.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PopupBattleWon"]
margin_left = 20.0
margin_top = 10.0
margin_right = 741.0
margin_bottom = 164.0

[node name="Label" type="Label" parent="CenterContainer/PopupBattleWon/VBoxContainer"]
margin_right = 721.0
margin_bottom = 65.0
text = "You win!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PopupBattleWon/VBoxContainer"]
margin_top = 69.0
margin_right = 721.0
margin_bottom = 154.0
alignment = 1

[node name="BtnMenu" type="Button" parent="CenterContainer/PopupBattleWon/VBoxContainer/HBoxContainer"]
margin_right = 362.0
margin_bottom = 85.0
mouse_default_cursor_shape = 2
text = "Main Menu"

[node name="BtnNext" type="Button" parent="CenterContainer/PopupBattleWon/VBoxContainer/HBoxContainer"]
margin_left = 366.0
margin_right = 721.0
margin_bottom = 85.0
mouse_default_cursor_shape = 2
text = "Next Battle"

[node name="Fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="pressed" from="CenterContainer/PopupBattleLost/VBoxContainer/HBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="CenterContainer/PopupBattleLost/VBoxContainer/HBoxContainer/BtnRetry" to="." method="_on_BtnRetry_pressed"]
[connection signal="pressed" from="CenterContainer/PopupBattleWon/VBoxContainer/HBoxContainer/BtnMenu" to="." method="_on_BtnMenu_pressed"]
[connection signal="pressed" from="CenterContainer/PopupBattleWon/VBoxContainer/HBoxContainer/BtnNext" to="." method="_on_BtnNext_pressed"]
